Added grunt and fixed nearly all grunt errors

--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,10 @@
     "@types/socket.io-client": "^1.4.29",
     "angular-cli": "1.0.0-beta.26",
     "codelyzer": "~2.0.0-beta.1",
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-eslint": "^18.1.0",
+    "grunt-tslint": "^4.0.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
